--- a/index.html
+++ b/index.html
@@ -5,6 +5,151 @@
     <title>HTML</title>
 </head>
 <body>
-
+    <table>
+        <table style="width: 800px">
+            <h1>统一建模语言理论测试</h1>
+            <tr>
+                <td>考试科目：</td>
+                <td>统一建模语言</td>
+                <td>时间：</td>
+                <td>100分钟</td>
+                <td>得分：</td>
+                <td>100</td>
+            </tr>
+            <tr>
+                <td>班级：</td>
+                <td><input type="text" placeholder="1班"></td>
+                <td>学号：</td>
+                <td><input type="text" placeholder="001"></td>
+                <td>姓名：</td>
+                <td><input type="text" placeholder="王小闹"></td>
+            </tr>
+        </table>
+        <table style="width: 800px">
+            <h2>一、填空题（每题5分，共20分）</h2>
+            <tr>
+                <td>1.UML的中文q全称是：</td>
+                <td><input type="text" placeholder="统一建模语言"></td>
+            </tr>
+            <tr>
+                <td>2.对象最突出的特征是：</td>
+                <td><input type="text" placeholder="封装性"><input type="text" placeholder="继承性"><input type="text" placeholder="多态性"></td>
+            </tr>
+        </table>
+        <table style="width: 800px">
+            <h2>二、选择题（每题10分，共20分）</h2>
+            <tr>
+                <td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
+                <td>1.UML与软件工程的关系是：</td>
+            </tr>
+            <tr>
+                <td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
+                <td><input type="radio">(A)UML就是软件工程</td>
+            </tr>
+            <tr>
+                <td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
+                <td><input type="radio" checked>(B)UML参与到软件工程中软件开发过程的几个阶段</td>
+            </tr>
+            <tr>
+                <td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
+                <td><input type="radio">(C)UML与软件工程无关</td>
+            </tr>
+            <tr>
+                <td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
+                <td><input type="radio">(D)UML是软件工程的一部分</td>
+            </tr>
+            <tr>
+                <td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
+                <td>2.Java语言支持：</td>
+            </tr>
+            <tr>
+                <td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
+                <td><input type="radio" checked>(A)单继承</td>
+            </tr>
+            <tr>
+                <td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
+                <td><input type="radio">(B)多继承</td>
+            </tr>
+            <tr>
+                <td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
+                <td><input type="radio">(C)单继承和多继承都支持</td>
+            </tr>
+            <tr>
+                <td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
+                <td><input type="radio">(D)单继承和多继承都不支持</td>
+            </tr>
+        </table>
+        <table style="width: 800px">
+            <h2>三、多选题（每题10分，共20分）</h2>
+            <tr>
+                <td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
+                <td>1.用例的粒度分为以下哪三种：</td>
+            </tr>
+            <tr>
+                <td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
+                <td><input type="checkbox" checked>(A)概述级</td>
+            </tr>
+            <tr>
+                <td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
+                <td><input type="checkbox" checked>(B)需求级</td>
+            </tr>
+            <tr>
+                <td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
+                <td><input type="checkbox">(C)用户目标级</td>
+            </tr>
+            <tr>
+                <td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
+                <td><input type="checkbox" checked>(D)子功能级</td>
+            </tr>
+            <tr>
+                <td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
+                <td>2.类图由以下哪三部分组成：</td>
+            </tr>
+            <tr>
+                <td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
+                <td><input type="checkbox" checked>(A)名称（Name）</td>
+            </tr>
+            <tr>
+                <td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
+                <td><input type="checkbox" checked>(B)属性（Attribute）</td>
+            </tr>
+            <tr>
+                <td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
+                <td><input type="checkbox" checked>(C)操作（Operation）</td>
+            </tr>
+            <tr>
+                <td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
+                <td><input type="checkbox">(D)方法（Function）</td>
+            </tr>
+        </table>
+        <table style="width: 800px">
+             <h2>四、判断题（每题10分，共20分）</h2>
+            <tr>
+                <td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
+                <td>1.用例图只是用于和客户交流和沟通的，用于确认需求<input type="radio">对<input type="radio" checked>错</td>
+            </tr>
+            <tr>
+                <td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
+                <td>2.在状态图中，终止状态在一个状态图中允许有任意多个<input type="radio" checked>对<input type="radio">错</td>
+            </tr>
+        </table>
+        <table style="width: 800px"> 
+            <h2>五、简答题（每题10分，共20分）</h2>
+            <tr>
+                <td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
+                <td>
+                    1.简述什么是模型以及模型的表现形式？
+                </td>
+            </tr>
+            <tr>
+                <td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
+                <td>
+                    <textarea rows="5" style="width: 500px" placeholder="模型是对现实世界的简化和抽象，模型是对所研究的系统、过程、事物或者概念的一种表达形式。可以是物理实体；可以是某种图像；或者是一种数学表达式。"></textarea>
+                </td>
+            </tr>
+        </table>
+        <br>
+        <input type="button" value="计算分数">
+    </table>
 </body>
 </html>
